# ModelCardSec

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: example_tabular.yaml
docs/: manual_security_checklist.md  risk_scoring.md
examples/: run_demo.py
modelcardsec/: __init__.py  audit.py  cli.py  demo.py  metrics.py  reporting.py  risk.py
modelcardsec/scanners/: __init__.py  calibration.py  drift.py  membership.py  pii.py  robustness.py  unsafe_outputs.py
modelcardsec/templates/: report.html.j2
paper/: main.tex  references.bib
reports/config_run/: metrics_summary.csv  modelcardsec_report.html  modelcardsec_report.md  modelcardsec_results.json
reports/config_run/models/: decision_tree.joblib  logistic_regression.joblib  random_forest.joblib
reports/demo/: metrics_summary.csv  modelcardsec_report.html  modelcardsec_report.md  modelcardsec_results.json
reports/demo/models/: decision_tree.joblib  logistic_regression.joblib  random_forest.joblib
scripts/: make_pipeline_figure.py
tests/: test_audit.py  test_metrics.py
